--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -78,7 +78,7 @@
         }
     }
 
-    body, input, select, textarea {
+    body, input {
         color: _palette(fg);
         font-family: _font(family);
         font-size: 15pt;
@@ -99,15 +99,6 @@
         }
     }
 
-    strong, b {
-        color: _palette(fg-bold);
-        font-weight: _font(weight-bold);
-    }
-
-    em, i {
-        font-style: italic;
-    }
-
     p {
         margin: 0 0 _size(element-margin) 0;
 
@@ -116,7 +107,7 @@
         }
     }
 
-    div, span {
+    div {
         .space-right {
             margin-right: 0.35em;
         }
@@ -140,7 +131,7 @@
         }
     }
 
-    h1, h2, h3, h4, h5, h6 {
+    h1, h2, h3 {
         color: _palette(fg-bold);
         font-weight: _font(weight-heavy);
         letter-spacing: 0.075em;
@@ -164,82 +155,8 @@
         line-height: 1.5em;
     }
 
-    h4 {
-        font-size: 0.9em;
-        line-height: 1.5em;
-    }
-
-    h5 {
-        font-size: 0.8em;
-        line-height: 1.5em;
-    }
-
-    h6 {
-        font-size: 0.7em;
-        line-height: 1.5em;
-    }
-
-    sub {
-        font-size: 0.8em;
-        position: relative;
-        top: 0.5em;
-    }
-
-    sup {
-        font-size: 0.8em;
-        position: relative;
-        top: -0.5em;
-    }
-
-    hr {
-        border: 0;
-        border-bottom: solid 1px _palette(border);
-        margin: _size(element-margin) 0;
-
-        &.major {
-            margin: (_size(element-margin) * 1.5) 0;
-        }
-    }
-
-    blockquote {
-        border-left: solid 6px _palette(border);
-        font-style: italic;
-        margin: 0 0 _size(element-margin) 0;
-        padding: 0.5em 0 0.5em 1.5em;
-    }
-
-    code {
-        background: _palette(border-bg);
-        font-family: _font(family-fixed);
-        font-size: 0.9em;
-        margin: 0 0.25em;
-        padding: 0.25em 0.65em;
-    }
-
-    pre {
-        -webkit-overflow-scrolling: touch;
-        font-family: _font(family-fixed);
-        font-size: 0.9em;
-        margin: 0 0 _size(element-margin) 0;
-
-        code {
-            display: block;
-            line-height: 1.75em;
-            padding: 1em 1.5em;
-            overflow-x: auto;
-        }
-    }
-
     .align-left {
         text-align: left;
-    }
-
-    .align-center {
-        text-align: center;
-    }
-
-    .align-right {
-        text-align: right;
     }
 
     .space-below {
@@ -249,7 +166,6 @@
 /* Loader */
 
     // Spinner
-
         @include keyframes('spinner-show') {
             0% { opacity: 0; }
             100% { opacity: 1; }
@@ -267,7 +183,6 @@
         }
 
     // Overlay
-
         @include keyframes('overlay-hide') {
             0% { opacity: 1; z-index: _misc(z-index-base); }
             15% { opacity: 1; z-index: _misc(z-index-base); }
@@ -280,7 +195,6 @@
             @include icon;
 
             // Spinner (inactive)
-
                 &:before {
                     @include vendor('animation', ('spinner-show 1.5s 1 0.25s ease forwards', 'spinner-hide 0.25s ease-in-out forwards !important'));
                     @include vendor('transform-origin', '50% 50%');
@@ -302,7 +216,6 @@
                 }
 
             // Overlay (inactive)
-
                 &:after {
                     @include vendor('animation', 'overlay-hide #{_duration(loader-fadein)} ease-in forwards !important');
                     background: _palette(accent2, bg);
@@ -323,14 +236,12 @@
             body {
 
                 // Spinner (active)
-
                     &:before {
                         @include vendor('animation', ('spinner-show 1.5s 1 0.25s ease forwards', 'spinner-rotate 0.75s infinite linear !important'));
                         z-index: _misc(z-index-base) + 1;
                     }
 
                 // Overlay (active)
-
                     &:after {
                         @include vendor('animation', 'none !important');
                         opacity: 1;
@@ -351,9 +262,9 @@
         }
     }
 
-/* Section/Article */
+/* Section/Header */
 
-    section, article {
+    section {
         &.special {
             text-align: center;
         }
@@ -378,17 +289,10 @@
             margin-top: (_size(element-margin) * -0.4);
         }
 
-        h4 + p,
-        h5 + p,
-        h6 + p {
-            font-size: 0.8em;
-            margin-top: (_size(element-margin) * -0.3);
-        }
-
         &.major {
             text-align: center;
 
-            h1, h2, h3, h4, h5, h6 {
+            h1, h2, h3 {
                 position: relative;
 
                 &:after {
@@ -423,10 +327,7 @@
     }
 
     input[type="text"],
-    input[type="password"],
-    input[type="email"],
-    select,
-    textarea {
+    input[type="email"] {
         @include vendor('appearance', 'none');
         background: _palette(border2-bg);
         border-radius: 0;
@@ -437,6 +338,7 @@
         padding: 0 1em;
         text-decoration: none;
         width: 100%;
+        height: _size(element-height);
 
         &:invalid {
             box-shadow: none;
@@ -444,106 +346,6 @@
 
         &:focus {
             box-shadow: inset 0 0 0 2px _palette(accent1, bg);
-        }
-    }
-
-    .select-wrapper {
-        @include icon;
-        display: block;
-        position: relative;
-
-        &:before {
-            color: _palette(fg-light);
-            content: '\f078';
-            display: block;
-            height: _size(element-height);
-            line-height: _size(element-height);
-            pointer-events: none;
-            position: absolute;
-            right: 0;
-            text-align: center;
-            top: 0;
-            width: _size(element-height);
-        }
-
-        select::-ms-expand {
-            display: none;
-        }
-    }
-
-    input[type="text"],
-    input[type="password"],
-    input[type="email"],
-    select {
-        height: _size(element-height);
-    }
-
-    textarea {
-        padding: 0.75em 1em;
-    }
-
-    input[type="checkbox"],
-    input[type="radio"], {
-        @include vendor('appearance', 'none');
-        display: block;
-        float: left;
-        margin-right: -2em;
-        opacity: 0;
-        width: 1em;
-        z-index: -1;
-
-        & + label {
-            @include icon;
-            color: _palette(fg);
-            cursor: pointer;
-            display: inline-block;
-            font-size: 1em;
-            font-weight: _font(weight);
-            padding-left: (_size(element-height) * 0.6) + 0.75em;
-            padding-right: 0.75em;
-            position: relative;
-
-            &:before {
-                background: _palette(border2-bg);
-                content: '';
-                display: inline-block;
-                height: (_size(element-height) * 0.6);
-                left: 0;
-                line-height: (_size(element-height) * 0.575);
-                position: absolute;
-                text-align: center;
-                top: 0;
-                width: (_size(element-height) * 0.6);
-            }
-        }
-
-        &:checked + label {
-            &:before {
-                background: _palette(accent2, bg);
-                color: _palette(accent2, fg-bold);
-                content: '\f00c';
-            }
-        }
-
-        &:focus + label {
-            &:before {
-                box-shadow: inset 0 0 0 2px _palette(accent1, bg);
-            }
-        }
-    }
-
-    input[type="checkbox"] {
-        & + label {
-            &:before {
-            }
-        }
-    }
-
-    input[type="radio"] {
-        & + label {
-            &:before {
-                border-radius: 100%;
-            }
         }
     }
 
@@ -570,26 +372,6 @@
     .formerize-placeholder {
         color: _palette(fg-light) !important;
         opacity: 1.0;
-    }
-
-/* Box */
-
-    .box {
-        border: solid 2px _palette(border);
-        margin-bottom: _size(element-margin);
-        padding: 1.5em;
-
-        > :last-child,
-        > :last-child > :last-child,
-        > :last-child > :last-child > :last-child {
-            margin-bottom: 0;
-        }
-
-        &.alt {
-            border: 0;
-            border-radius: 0;
-            padding: 0;
-        }
     }
 
 /* Icon */
@@ -682,16 +464,6 @@
     }
 
 /* List */
-
-    ol {
-        list-style: decimal;
-        margin: 0 0 _size(element-margin) 0;
-        padding-left: 1.25em;
-
-        li {
-            padding-left: 0.25em;
-        }
-    }
 
     ul {
         list-style: disc;
@@ -831,153 +603,12 @@
                     padding-right: 0;
                 }
             }
-
-            &.small {
-                li {
-                    padding: 0 (_size(element-margin) * 0.25) 0 0;
-                }
-            }
-
-            &.vertical {
-                li {
-                    display: block;
-                    padding: (_size(element-margin) * 0.5) 0 0 0;
-
-                    &:first-child {
-                        padding-top: 0;
-                    }
-
-                    > * {
-                        margin-bottom: 0;
-                    }
-                }
-
-                &.small {
-                    li {
-                        padding: (_size(element-margin) * 0.25) 0 0 0;
-
-                        &:first-child {
-                            padding-top: 0;
-                        }
-                    }
-                }
-            }
-
-            &.fit {
-                display: table;
-                margin-left: (_size(element-margin) * -0.5);
-                padding: 0;
-                table-layout: fixed;
-                width: calc(100% + #{(_size(element-margin) * 0.5)});
-
-                li {
-                    display: table-cell;
-                    padding: 0 0 0 (_size(element-margin) * 0.5);
-
-                    > * {
-                        margin-bottom: 0;
-                        min-width: 0;
-                    }
-                }
-
-                &.small {
-                    margin-left: (_size(element-margin) * -0.25);
-                    width: calc(100% + #{(_size(element-margin) * 0.25)});
-
-                    li {
-                        padding: 0 0 0 (_size(element-margin) * 0.25);
-                    }
-                }
-            }
-        }
-    }
-
-    dl {
-        margin: 0 0 _size(element-margin) 0;
-    }
-
-/* Table */
-
-    .table-wrapper {
-        -webkit-overflow-scrolling: touch;
-        overflow-x: auto;
-    }
-
-    table {
-        margin: 0 0 _size(element-margin) 0;
-        width: 100%;
-
-        tbody {
-            tr {
-                border: solid 1px _palette(border);
-                border-left: 0;
-                border-right: 0;
-
-                &:nth-child(2n + 1) {
-                    background-color: _palette(border-bg);
-                }
-            }
-        }
-
-        td {
-            padding: 0.75em 0.75em;
-        }
-
-        th {
-            color: _palette(fg-bold);
-            font-size: 0.9em;
-            font-weight: _font(weight-bold);
-            padding: 0 0.75em 0.75em 0.75em;
-            text-align: left;
-        }
-
-        thead {
-            border-bottom: solid 2px _palette(border);
-        }
-
-        tfoot {
-            border-top: solid 2px _palette(border);
-        }
-
-        &.alt {
-            border-collapse: separate;
-
-            tbody {
-                tr {
-                    td {
-                        border: solid 1px _palette(border);
-                        border-left-width: 0;
-                        border-top-width: 0;
-
-                        &:first-child {
-                            border-left-width: 1px;
-                        }
-                    }
-
-                    &:first-child {
-                        td {
-                            border-top-width: 1px;
-                        }
-                    }
-                }
-            }
-
-            thead {
-                border-bottom: 0;
-            }
-
-            tfoot {
-                border-top: 0;
-            }
         }
     }
 
 /* Button */
 
     input[type="submit"],
-    input[type="reset"],
-    input[type="button"],
-    button,
     .button {
         @include vendor('appearance', 'none');
         @include vendor('transition', ('background-color #{_duration(transition)} ease-in-out', 'color #{_duration(transition)} ease-in-out'));
@@ -1006,29 +637,6 @@
         &:active {
             background-color: _palette(border2-bg);
             color: _palette(fg-bold) !important;
-        }
-
-        &.icon {
-            padding-left: 1.35em;
-
-            &:before {
-                color: _palette(fg-light);
-                margin-right: 0.5em;
-            }
-        }
-
-        &.fit {
-            display: block;
-            margin: 0 0 (_size(element-margin) * 0.5) 0;
-            width: 100%;
-        }
-
-        &.small {
-            font-size: 0.8em;
-        }
-
-        &.big {
-            font-size: 1.35em;
         }
 
         &.special {
@@ -1171,7 +779,7 @@
             padding-bottom: (_size(element-height) + ($size-padding-lr * 2));
             vertical-align: middle;
 
-            h1, h2, h3, h4, h5, h6, strong, b {
+            h1, h2, h3 {
                 color: _palette(alt, fg-bold);
             }
 
@@ -1240,7 +848,7 @@
             text-align: center;
             width: 100%;
 
-            h1, h2, h3, h4, h5, h6, strong, b {
+            h1, h2, h3 {
                 color: _palette(alt, fg-bold);
             }
 
@@ -1301,10 +909,9 @@
 
         /* Basic */
 
-            body, input, select, textarea {
+            body, input {
                 font-size: 12pt;
             }
-
     }
 
 /* Medium */
@@ -1373,25 +980,26 @@
             }
 
         /* Image */
-        .img-on-left {
-            img {
-                margin: 1em;
+
+            .img-on-left {
+                img {
+                    margin: 1em;
+                }
+
+                h3 {
+                    padding-top: 1em;
+                }
             }
 
-            h3 {
-                padding-top: 1em;
-            }
-        }
+            .img-on-right {
+                img {
+                    margin: 1em;
+                }
 
-        .img-on-right {
-            img {
-                margin: 1em;
+                h3 {
+                    padding-top: 1em;
+                }
             }
-
-            h3 {
-                padding-top: 1em;
-            }
-        }
 
         /* Main */
 
@@ -1454,10 +1062,11 @@
                 min-width: 320px;
             }
 
-        /* Section/Article */
+        /* Section/Header */
+
             header {
                  &.major {
-                    h1, h2, h3, h4, h5, h6 {
+                    h1, h2, h3 {
                         &:after {
                             background: _palette(border-dark);
                         }
@@ -1512,16 +1121,6 @@
                             width: 100%;
                         }
                     }
-
-                    &.small {
-                        li {
-                            padding: (_size(element-margin) * 0.25) 0 0 0;
-
-                            &:first-child {
-                                padding-top: 0;
-                            }
-                        }
-                    }
                 }
 
                 // When viewing on small screens, arrange the grid into a column
@@ -1571,15 +1170,11 @@
         /* Button */
 
             input[type="submit"],
-            input[type="reset"],
-            input[type="button"],
-            button,
             .button {
                 padding: 0;
 
                 &.icon {
                     padding-left: 0;
-
                 }
             }
 
@@ -1627,5 +1222,4 @@
                     text-align: center;
                 }
             }
-
     }
