Made various NEXT logos.

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -419,6 +419,18 @@
         }
     }
 
+    // #next-title {
+    //     height: 1.3em;
+    // }
+
+    #whats-next {
+        height: 55%;
+    }
+
+    #why-next {
+        height: 1.3em;
+    }
+
     .img-on-left {
         display: flex;
         flex-direction: row;
