--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1480,6 +1480,15 @@ img.the-game-icon {
 img.bg {
   display: none; }
 
+#next-title {
+  height: 1.3em; }
+
+#whats-next {
+  height: 55%; }
+
+#why-next {
+  height: 1.3em; }
+
 .img-on-left {
   display: flex;
   flex-direction: row;
