--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -300,37 +300,37 @@ body {
   clear: left; }
 
 .\-11u {
-  margin-left: 91.66667%; }
+  margin-left: 91.6666666667%; }
 
 .\-10u {
-  margin-left: 83.33333%; }
+  margin-left: 83.3333333333%; }
 
 .\-9u {
   margin-left: 75%; }
 
 .\-8u {
-  margin-left: 66.66667%; }
+  margin-left: 66.6666666667%; }
 
 .\-7u {
-  margin-left: 58.33333%; }
+  margin-left: 58.3333333333%; }
 
 .\-6u {
   margin-left: 50%; }
 
 .\-5u {
-  margin-left: 41.66667%; }
+  margin-left: 41.6666666667%; }
 
 .\-4u {
-  margin-left: 33.33333%; }
+  margin-left: 33.3333333333%; }
 
 .\-3u {
   margin-left: 25%; }
 
 .\-2u {
-  margin-left: 16.66667%; }
+  margin-left: 16.6666666667%; }
 
 .\-1u {
-  margin-left: 8.33333%; }
+  margin-left: 8.3333333333%; }
 
 @media screen and (max-width: 1680px) {
   .row > * {
@@ -468,37 +468,37 @@ body {
     clear: left; }
 
   .\-11u\28large\29 {
-    margin-left: 91.66667%; }
+    margin-left: 91.6666666667%; }
 
   .\-10u\28large\29 {
-    margin-left: 83.33333%; }
+    margin-left: 83.3333333333%; }
 
   .\-9u\28large\29 {
     margin-left: 75%; }
 
   .\-8u\28large\29 {
-    margin-left: 66.66667%; }
+    margin-left: 66.6666666667%; }
 
   .\-7u\28large\29 {
-    margin-left: 58.33333%; }
+    margin-left: 58.3333333333%; }
 
   .\-6u\28large\29 {
     margin-left: 50%; }
 
   .\-5u\28large\29 {
-    margin-left: 41.66667%; }
+    margin-left: 41.6666666667%; }
 
   .\-4u\28large\29 {
-    margin-left: 33.33333%; }
+    margin-left: 33.3333333333%; }
 
   .\-3u\28large\29 {
     margin-left: 25%; }
 
   .\-2u\28large\29 {
-    margin-left: 16.66667%; }
+    margin-left: 16.6666666667%; }
 
   .\-1u\28large\29 {
-    margin-left: 8.33333%; } }
+    margin-left: 8.3333333333%; } }
 @media screen and (max-width: 980px) {
   .row > * {
     padding: 0 0 0 1.5em; }
@@ -635,37 +635,37 @@ body {
     clear: left; }
 
   .\-11u\28medium\29 {
-    margin-left: 91.66667%; }
+    margin-left: 91.6666666667%; }
 
   .\-10u\28medium\29 {
-    margin-left: 83.33333%; }
+    margin-left: 83.3333333333%; }
 
   .\-9u\28medium\29 {
     margin-left: 75%; }
 
   .\-8u\28medium\29 {
-    margin-left: 66.66667%; }
+    margin-left: 66.6666666667%; }
 
   .\-7u\28medium\29 {
-    margin-left: 58.33333%; }
+    margin-left: 58.3333333333%; }
 
   .\-6u\28medium\29 {
     margin-left: 50%; }
 
   .\-5u\28medium\29 {
-    margin-left: 41.66667%; }
+    margin-left: 41.6666666667%; }
 
   .\-4u\28medium\29 {
-    margin-left: 33.33333%; }
+    margin-left: 33.3333333333%; }
 
   .\-3u\28medium\29 {
     margin-left: 25%; }
 
   .\-2u\28medium\29 {
-    margin-left: 16.66667%; }
+    margin-left: 16.6666666667%; }
 
   .\-1u\28medium\29 {
-    margin-left: 8.33333%; } }
+    margin-left: 8.3333333333%; } }
 @media screen and (max-width: 736px) {
   .row > * {
     padding: 0 0 0 1em; }
@@ -802,37 +802,37 @@ body {
     clear: left; }
 
   .\-11u\28small\29 {
-    margin-left: 91.66667%; }
+    margin-left: 91.6666666667%; }
 
   .\-10u\28small\29 {
-    margin-left: 83.33333%; }
+    margin-left: 83.3333333333%; }
 
   .\-9u\28small\29 {
     margin-left: 75%; }
 
   .\-8u\28small\29 {
-    margin-left: 66.66667%; }
+    margin-left: 66.6666666667%; }
 
   .\-7u\28small\29 {
-    margin-left: 58.33333%; }
+    margin-left: 58.3333333333%; }
 
   .\-6u\28small\29 {
     margin-left: 50%; }
 
   .\-5u\28small\29 {
-    margin-left: 41.66667%; }
+    margin-left: 41.6666666667%; }
 
   .\-4u\28small\29 {
-    margin-left: 33.33333%; }
+    margin-left: 33.3333333333%; }
 
   .\-3u\28small\29 {
     margin-left: 25%; }
 
   .\-2u\28small\29 {
-    margin-left: 16.66667%; }
+    margin-left: 16.6666666667%; }
 
   .\-1u\28small\29 {
-    margin-left: 8.33333%; } }
+    margin-left: 8.3333333333%; } }
 @media screen and (max-width: 520px) {
   .row > * {
     padding: 0 0 0 1em; }
@@ -969,37 +969,37 @@ body {
     clear: left; }
 
   .\-11u\28xsmall\29 {
-    margin-left: 91.66667%; }
+    margin-left: 91.6666666667%; }
 
   .\-10u\28xsmall\29 {
-    margin-left: 83.33333%; }
+    margin-left: 83.3333333333%; }
 
   .\-9u\28xsmall\29 {
     margin-left: 75%; }
 
   .\-8u\28xsmall\29 {
-    margin-left: 66.66667%; }
+    margin-left: 66.6666666667%; }
 
   .\-7u\28xsmall\29 {
-    margin-left: 58.33333%; }
+    margin-left: 58.3333333333%; }
 
   .\-6u\28xsmall\29 {
     margin-left: 50%; }
 
   .\-5u\28xsmall\29 {
-    margin-left: 41.66667%; }
+    margin-left: 41.6666666667%; }
 
   .\-4u\28xsmall\29 {
-    margin-left: 33.33333%; }
+    margin-left: 33.3333333333%; }
 
   .\-3u\28xsmall\29 {
     margin-left: 25%; }
 
   .\-2u\28xsmall\29 {
-    margin-left: 16.66667%; }
+    margin-left: 16.6666666667%; }
 
   .\-1u\28xsmall\29 {
-    margin-left: 8.33333%; } }
+    margin-left: 8.3333333333%; } }
 /* Basic */
 html {
   background-color: #313a3d;
@@ -1720,30 +1720,6 @@ input[type="submit"],
       margin-right: 1px;
       vertical-align: middle;
       width: calc(100% - 10px); }
-  .main .goto-next {
-    -moz-transition: background-color 0.2s ease-in-out;
-    -webkit-transition: background-color 0.2s ease-in-out;
-    -ms-transition: background-color 0.2s ease-in-out;
-    transition: background-color 0.2s ease-in-out;
-    background-color: rgba(144, 144, 144, 0.075);
-    background-image: url("images/arrow.svg");
-    background-position: center center;
-    background-repeat: no-repeat;
-    border-radius: 100%;
-    border: 0;
-    bottom: 3em;
-    display: block;
-    height: 4em;
-    left: 50%;
-    line-height: 4em;
-    margin-left: -2em;
-    overflow: hidden;
-    position: absolute;
-    text-indent: 4em;
-    white-space: nowrap;
-    width: 4em; }
-    .main .goto-next:hover {
-      background-color: rgba(144, 144, 144, 0.15); }
 
 /* Header */
 #header {
@@ -1889,8 +1865,6 @@ input[type="submit"],
   /* Main */
   .main .container {
     padding: 3em 1.5em 1em 1.5em ; }
-  .main .goto-next {
-    display: none; }
 
   /* Header */
   #header {
