Moved 'Low Cost' section from 'The Game' section to 'NEXT Overview' section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1473,7 +1473,7 @@ img.inline {
   max-width: 100%; }
 img.logo {
   width: 3.2em; }
-img.the-game-icon {
+img.grid-icon {
   margin: 1em;
   max-width: 40%;
   max-height: 40%; }
