--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -408,7 +408,7 @@
             width: 3.2em;
         }
 
-        &.the-game-icon {
+        &.grid-icon {
             margin: 1em;
             max-width: 40%;
             max-height: 40%;
