Increased width of main container

--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -12,6 +12,7 @@
 
 // Size.
     $size: (
+        container-width:    60em,
         element-height:     3em,
         element-margin:     2em
     );
