--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1975,6 +1975,9 @@ input[type="submit"],
 
   /* Custom */
   .the-game-text p {
-    text-align: center; } }
+    text-align: center; }
+
+  #title-box {
+    background: rgba(255, 255, 255, 0.75); } }
 
 /*# sourceMappingURL=main.css.map */
