--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1198,4 +1198,8 @@
                     text-align: center;
                 }
             }
+
+            #title-box {
+                background: transparentize(_palette(bg), 0.25);
+            }
     }
